# EliteVA

./: .gitignore  .gitmodules  App.config  Documentation.cs  EliteVA v1.0.0.0.vap  EliteVA variables.txt  EliteVA.cs  EliteVA.csproj  EliteVA.ini  EliteVA.sln  Events.cs  LICENSE  Plugin.cs  PluginConfiguration.cs  Profile.vap  README.md  VoiceAttack.cs  VoiceAttackPlugin.cs  VoiceAttackPluginWrapper.cs  build.bat  config.yml  package-lock.json  package.json  packages.config  vars.txt
.github/: dependabot.yml
.github/workflows/: build.yml  cd.yml  ci.yml  dotnet.yml
EliteVA/: .gitignore  EliteVA-setup.bat  EliteVA.csproj  EliteVA.ini  README.md  VoiceAttack.cs  build.bat  layout.yml
EliteVA.Updater/: App.config  EliteVA.Updater.csproj  Program.cs  ReleaseResponse.cs  packages.config
EliteVA.Updater/Properties/: AssemblyInfo.cs
EliteVA/Proxy/: VoiceAttackPlugin.cs  VoiceAttackPluginWrapper.cs  VoiceAttackService.cs
FileLogger/: FileLogger.cs  FileLoggerExtensions.cs  FileLoggerProvider.cs  Valsom.Logging.File.csproj
ProfileGenerator/: ProfileGenerator.csproj  Program.cs
Properties/: AssemblyInfo.cs
Proxy/: ProxyHolder.cs  VoiceAttackPluginWrapper.cs  VoiceAttackProxy.cs
Services/: EliteApiService.cs
Variables/: VoiceAttackVariables.cs
WebSocket/: EventContext.cs  EventPath.cs  MessageType.cs  PathsPayload.cs  WebSocketMessage.cs
src-client/: package-lock.json  package.json
src-plugin/: EliteVA.sln
src-tauri/: Cargo.toml  EliteAPI.ini  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: downloader.rs  main.rs
(+106 files in other folders)
